Brings "Reset User Tokens" form in-line with 8shapes mockups
+ Breaks dialog out of its frame
+ Left-aligns the title, body, and footer
+ Removes background color from all save/discard toolbars across the app
+ Left-aligns the save button with associated content across the app

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -21,6 +21,13 @@
   $ui-tool-background-image: $panel-light-tool-background-image
 );
 
+.feature-content {
+  .x-toolbar {
+    background: white;
+    padding-left: 10px;
+  }
+}
+
 /**
  * cls: 'feature-content'
  */
@@ -100,5 +107,3 @@ $grid-feature-menu-selected-background-color: #d1d1d1;
   $ui-header-color: #ffffff,
   $ui-header-background-color: #3d4e7e
 );
-
-
