Fixes line height of detail header so descenders aren't obscured

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -83,7 +83,8 @@ $grid-feature-menu-selected-background-color: #d1d1d1;
 
   $ui-header-color: #333333,
   $ui-header-background-color: #f4f4f4,
-  $ui-header-font-size: 16px
+  $ui-header-font-size: 16px,
+  $ui-header-line-height: 20px
 );
 
 /**
