--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
@@ -3,25 +3,58 @@
  */
 
 /**
+ * @class NX.ext.tab.SortedPanel
  * ui: 'sorted-tabpanel'
  */
 
 @include extjs-tab-panel-ui(
   $ui: 'sorted-tabpanel',
 
-  $ui-tab-background-color: #f4f4f4,
-  $ui-tab-background-color-active: #D1D1D1,
-  $ui-tab-background-color-over: #E4E4E4,
-  $ui-strip-background-color: #ffffff,
-  $ui-bar-background-color: #f4f4f4,
+  // text colors
   $ui-tab-color: #333333,
-  $ui-tab-color-over: #333333
+  $ui-tab-color-over: #333333,
+
+  // tab border and backgrounds
+  $ui-tab-border-color: #f4f4f4,
+  $ui-tab-background-color: #f4f4f4,
+
+  $ui-tab-border-color-active: #bbbbbb,
+  $ui-tab-background-color-active: #ffffff,
+
+  $ui-tab-border-color-over: #E4E4E4,
+  $ui-tab-background-color-over: #E4E4E4,
+
+  // background color of tab-bar
+  $ui-bar-background-color: #f4f4f4,
+
+  // strip under the tab-bar
+  $ui-strip-height: 1px,
+  $ui-strip-background-color: #bbbbbb,
+
+  // FIXME: WTF does this control?
+  $ui-tab-border-width: 0px
 );
 
-.x-tab-bar-sorted-tabpanel {
-  .x-box-inner {
-    border-color: #aaaaaa;
-    border-width: 0 0 1px 0;
-    border-style: solid;
-  }
+// add few pixel to keep tabs seperated from surrounding container
+.x-tab-bar-body-sorted-tabpanel-top,
+.x-tab-bar-body-sorted-tabpanel-left,
+.x-tab-bar-body-sorted-tabpanel-right {
+  padding-left: 5px;
+}
+
+// match non-active tab bottom-border color of strip under tab-bar
+.x-tab-sorted-tabpanel-top,
+.x-tab-sorted-tabpanel-left,
+.x-tab-sorted-tabpanel-right {
+  border-bottom: 1px solid #bbbbbb;
+}
+
+// match active tab border color of strip under tab-bar, except bottom which should be white to match tab contents
+.x-tab-sorted-tabpanel-top-active,
+.x-tab-sorted-tabpanel-left-active,
+.x-tab-sorted-tabpanel-right-active {
+  border-top: 1px solid #bbbbbb;
+  border-right: 1px solid #bbbbbb;
+  border-bottom: 1px solid #ffffff;
+  border-left: 1px solid #bbbbbb;
 }
