Creates a global index of colors

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
@@ -63,6 +63,12 @@
 /* including package ext-theme-neutral */
 /* including package ext-theme-neptune */
 /* including package rapture-theme */
+/**
+ * Global styles for the entire application
+ */
+/**
+ * Colors
+ */
 /* including package rapture-theme */
 /**
  * @class Ext.Component
